# Zenmav

./: .gitignore  FENCE_TOML.md  README.md  core.py  fence_config.toml  mav.parm  mav.tlog  mav.tlog.raw  penis.txt  pyproject.toml  requirements.txt
docs/: gimbal.md  zenmav.md
docs/fence_configs_examples/: global_fence.toml  parc_mont_royal.toml
examples/: gimbal_example.py
src/zenmav/: LICENSE  core.py  gimbal.py  test.ipynb  test.py  test2.py  zenboundary.py  zenfence.py  zengimbal.py  zenpoint.py
src/zenmav.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/zenmav_Astro_Coco/: core.py
tests/: integration_test_gimbal.py  test_gimbal.py
