[build-system]
requires = ["setuptools >= 77.0.3", "pymavlink","geopy","numpy"]
build-backend = "setuptools.build_meta"
[project]
name = "Zenmav_Astro_Coco"
version = "0.0.1"
authors = [
  { name="Colin Rousseau", email="colin.rousseau@polymtl.ca" },
]
description = "Wrappers pymavlink"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/zenith-polymtl/Zenmav"