[build-system]
requires = ["setuptools >= 77.0.3", "wheel"]
build-backend = "setuptools.build_meta"
[project]
name = "zenmav"
version = "0.0.10"
authors = [
  { name="Colin Rousseau", email="colin.rousseau@polymtl.ca" },
]
description = "Pymavlink wrappers for easy drone control developped by Zenith Polymtl"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
  "pymavlink",
  "geopy",
  "numpy",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/zenith-polymtl/Zenmav"